fix imgs not showing

--- a/scss/layout/_overall-layout.scss
+++ b/scss/layout/_overall-layout.scss
@@ -60,7 +60,7 @@
   // }
 
   @include responsive(small) {
-    padding: 7rem 0 10rem;
+    padding: 7rem 0 8rem;
   }
 }
 
